--- a/404.html
+++ b/404.html
@@ -123,7 +123,7 @@
                         
                     </div>
 
-                    <h1 class="menu-title">ERTH: CO2 Digital Currency</h1>
+                    <h1 class="menu-title">ERTH: Climate Capitalism</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
