deploy: 3bac096c4eed736ce1010ca8c099d52583023c54

--- a/1_preface.html
+++ b/1_preface.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="1_preface.html" class="active">Preface</a></li><li class="chapter-item expanded "><a href="2_the_incentive_problem.html"><strong aria-hidden="true">1.</strong> The Incentive Problem</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="1_preface.html" class="active">Preface</a></li><li class="chapter-item expanded "><a href="2_the_incentive_problem.html"><strong aria-hidden="true">1.</strong> The Incentive Problem</a></li><li class="chapter-item expanded affix "><a href="citations.html">Citations</a></li><li class="chapter-item expanded affix "><a href="contributors.html">Contributors</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -156,6 +156,15 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#preface" id="preface">Preface</a></h1>
+<p>The Earth's climate has changed throughout history. Just in the last 650,000 years there have been seven cycles of glacial advance and retreat, with the abrupt end of the last ice age about 11,700 years ago marking the beginning of the modern climate era — and of human civilization. </p>
+<p>Gases that trap heat in the atmosphere are called greenhouse gases. Greenhouse gases absorb radiant heat and re-radiate the energy back into the atmosphere. The gases act like a &quot;battery&quot; that gains storage capacity as more absorbing atoms are present in the atmosphere. These gases, specifically CO2, constitute approximately 80% of human emissions. The planet's average surface temperature has risen about 1.62 degrees Fahrenheit (0.9 degrees Celsius) since the late 19th century, a change driven largely by increased carbon dioxide and other human-made emissions into the atmosphere. </p>
+<p>https://climate.nasa.gov/evidence/</p>
+<p>The driving force behind industrialism and technology is opportunity. The force of such opportunity has transformed
+human society - socially and economically from an agrarian society into an industrial one. A change that has radically improved the standard of living and quality of healthcare in the western world, China, India, and now developing nations. </p>
+<p>https://www.researchgate.net/publication/318888520_THE_EFFECTS_OF_INDUSTRIALIZATION_ON_CLIMATE_CHANGE</p>
+<p>When faced with the question of whether to improve ones standard of living or forgo that opportunity in exchange for the collective health of the world, immediate survival prevails. Capitalism (owning the means of production) tends to exchange the Earth's resources for the sake of immediate profit, but at the cost of long term planetary health. We cannot rationally expect a poor villager to stop using a gas powered (CO2 emitting) irrigation pump when that crops of that field support the villagers livelihood. Nor can we expect a public oil company to forgo profits at the cost of shareholder interests.</p>
+<p>Capitalism is not inherently bad. Fundamentally capitalism is humanistic in the sense that it believes that &quot;the people&quot; know best. The basis of a free market is that many individuals make decisions and thus the market is self-regulates. Another benefit of capitalism is that it drives technological innovation, which in the context of climate change, is much needed. </p>
+<p>The fundamental issue is that capitalistic profit is often at odds with sustainable behavior. But what if there was a way to align incentives such that sustainable behavior was appealing to the capitalist? This paper expands on this idea and offers a potential albeit highly experimental solution.</p>
 
                     </main>
 
