--- a/404.html
+++ b/404.html
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="1_preface.html">Preface</a></li><li class="chapter-item expanded "><a href="2_the_incentive_problem.html"><strong aria-hidden="true">1.</strong> The Incentive Problem</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="1_preface.html">Preface</a></li><li class="chapter-item expanded "><a href="2_the_incentive_problem.html"><strong aria-hidden="true">1.</strong> The Incentive Problem</a></li><li class="chapter-item expanded affix "><a href="citations.html">Citations</a></li><li class="chapter-item expanded affix "><a href="contributors.html">Contributors</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
